--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -16,7 +16,7 @@
 .stories .components {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
