Боковое меню. Карта сайта. Кнопка вверх. Правки.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -18,5 +18,8 @@
 @import "jquery.cropbox.css";
 @import "pagination.css";
 @import "option-input.css";
+@import "map.css";
+@import "bar-menu.css";
+@import "back-top.css";
 @import "cart.css";
 @import "main.css";
