--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    bottom: 30px;
+    bottom: 110px;
     right: 0;
     width: 50px;
     height: 50px;
@@ -32,10 +32,12 @@
     position: fixed;
     right: 0;
     top: 0;
+    overflow: auto;
+    overflow-x: hidden;
     background: url('/img/system/corner-right.png') no-repeat 100% #F0F0FF;
     background-size: 65%;
     box-shadow: 0 0.5em 1.5em 1.5em #F0F0FF;
-    z-index: 10000;
+    z-index: 25000;
 }
 
 .cart {
