--- a/public/css/map.css
+++ b/public/css/map.css
@@ -7,6 +7,11 @@
     margin-right: 100px;
 }
 
+.map .map-block ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
 .map li {
     list-style: none;
 }
