Подписка на рассылку.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,6 +19,7 @@
 @import "pagination.css";
 @import "option-input.css";
 @import "map.css";
+@import "modal.css";
 @import "bar-menu.css";
 @import "back-top.css";
 @import "cart.css";
