--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -13,7 +13,7 @@
 .modal .modal-content {
     position: relative;
     overflow: hidden;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     margin: 150px auto 0px auto;
     width: 300px;
     color: #FFFFFF;
@@ -49,7 +49,7 @@
     text-align: right;
 }
 
-.modal .modal-button button {
+.modal .modal-button button, .modal .modal-button a {
     height: 36px;
     width: 80px;
     border-radius: 30px;
@@ -60,6 +60,12 @@
     text-transform: uppercase;
 }
 
-.modal .modal-button button:hover {
+.modal .modal-button a {
+    text-decoration: none;
+    padding: 2px 10px;
+    margin-bottom: 10px;
+}
+
+.modal .modal-button button:hover, .modal .modal-button a:hover {
     background: #8c6804;
 }
