--- a/public/css/back-top.css
+++ b/public/css/back-top.css
@@ -29,3 +29,17 @@
     width: 50px;
     height: 50px;
 }
+
+@media screen and (max-width: 799px) {
+    #back-top {
+        width: 25px;
+        height: 25px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+    }
+    #back-top div {
+        width: 25px;
+        height: 25px;
+        font-size: 7px;
+    }
+}
