--- a/public/css/bar-menu.css
+++ b/public/css/bar-menu.css
@@ -44,3 +44,37 @@
 #bar-main li {
     list-style: none;
 }
+
+#close-menu, .mob-user, .mob-search {
+    display: none;
+}
+
+@media screen and (max-width: 799px) {
+    #bar-menu {
+        width: 25px;
+        height: 25px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        font-size: 5px;
+        top: 80px;
+    }
+    #bar-main {
+        width: 100%;
+    }
+    #close-menu {
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 15px;
+        right: 70px;
+        color: #AD7F00;
+        cursor: pointer;
+    }
+    .mob-user, .mob-search {
+        display: block;
+    }
+    .full-user {
+        display: none;
+    }
+}
