--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,9 +1,11 @@
 .footer {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .footer ul {
@@ -56,6 +58,7 @@
     height: 70px;
     border: 3px solid #AD7F00;
     margin-right: 36px;
+    margin-bottom: 30px;
     border-radius: 25px;
     position: relative;
     cursor: pointer;
@@ -83,4 +86,18 @@
 
 .footer .social ul li:hover a {
     color: #F0F0FF;
+}
+
+@media screen and (max-width: 799px) {
+    .footer {
+        padding: 0 40px;
+    }
+    .footer .social ul li {
+        width: 35px;
+        height: 30px;
+        margin-right: 10px;
+    }
+    .footer .social ul li a {
+        font-size: 0.5em;
+    }
 }
