--- a/public/css/main-cover.css
+++ b/public/css/main-cover.css
@@ -1,3 +1,7 @@
+.main {
+    padding: 0 60px;
+}
+
 .main .gradient-border {
     max-width: 1200px;
     height: 500px;
@@ -23,4 +27,13 @@
 
 .main .backstretch {
     border-radius: 3px;
+}
+
+@media screen and (max-width: 799px) {
+    .main {
+        padding: 0 40px;
+    }
+    .main .main-cover p {
+        font-size: 2em;
+    }
 }
