--- a/public/css/pagination.css
+++ b/public/css/pagination.css
@@ -78,3 +78,20 @@
     border-top-right-radius: 3px;
     border-bottom-right-radius: 3px;
 }
+
+@media screen and (max-width: 799px) {
+    .pagination {
+        font-size: 12px !important;
+    }
+    .pagination>li>a, .pagination>li>span {
+        padding: 3px 6px;
+    }
+    .pagination>li:first-child>a, .pagination>li:first-child>span {
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+    }
+    .pagination>li:last-child>a, .pagination>li:last-child>span {
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+    }
+}
