--- a/public/css/progress-bar.css
+++ b/public/css/progress-bar.css
@@ -18,6 +18,11 @@
 
 .progress-bar h1 {
     margin-top: 1.5em;
+    padding: 0 60px;
+}
+
+.progress-bar h2, .progress-bar p {
+    padding: 0 60px;
 }
 
 .progress-bar .progressbar {
@@ -25,7 +30,7 @@
     margin: 4em 0;
 }
 
-@media only screen and (min-width: 650px) {
+@media only screen and (min-width: 800px) {
     .progress-bar .progressbar {
         display: block;
     }
@@ -109,7 +114,6 @@
     position: relative;
     top: 0;
     padding-bottom: 1.8em;
-    /* font-family: 'Open Sans'; */
     font-weight: 300;
     color: #3CA6C7;
     transition: color 150ms ease-in, top 100ms ease-out;
@@ -154,4 +158,13 @@
 .progress-bar .buttons {
     text-align: center;
     font-size: 1.2em;
+}
+
+@media screen and (max-width: 799px) {
+    .progress-bar h1, .progress-bar h2 {
+        padding: 0 40px;
+    }
+    .progress-bar p {
+        padding: 0 40px;
+    }
 }
