--- a/public/css/reviews.css
+++ b/public/css/reviews.css
@@ -1,6 +1,7 @@
 .reviews {
     max-width: 750px;
     margin: 0 auto;
+    padding: 0 60px;
 }
 
 .reviews .body {
@@ -148,4 +149,40 @@
 
 .reviews .notification a:hover {
     color: #80E1FF;
+}
+
+@media screen and (max-width: 799px) {
+    .reviews {
+        padding: 0 40px;
+    }
+    .reviews .title {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 13px;
+    }
+    .reviews .title .avatar {
+        width: 100px;
+        height: 100px;
+        border: 2px solid #3CA6C7;
+        margin: 0 auto;
+    }
+    .reviews .messages .avt {
+        width: 25px;
+        height: 25px;
+        border: 2px solid #3CA6C7;
+        background: #3CA6C7;
+        margin: 0 0 0 5px;
+        position: absolute;
+        right: 0px;
+    }
+    .reviews .form {
+        width: 100%;
+    }
+    .reviews .form label {
+        width: 100%;
+    }
+    .reviews .form .button {
+        width: 100%;
+    }
 }
