--- a/public/css/sections.css
+++ b/public/css/sections.css
@@ -1,6 +1,7 @@
 .sections {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 60px;
 }
 
 .sections .container {
@@ -77,7 +78,7 @@
 .sections .filter .bt input {
     border: none;
     width: 100%;
-    color: white;
+    color: #fff;
 }
 
 .sections .filter .bt a {
@@ -85,6 +86,7 @@
     width: 100%;
     text-align: center;
     padding: 0 5px;
+    color: #fff;
 }
 
 .sections .product {
@@ -520,4 +522,135 @@
     border-right: 3px solid #8F0808;
     border-bottom: 3px solid transparent;
     border-top: 3px solid #8F0808;
+}
+
+.sections .body .main-contacts, .sections .mob-gallery {
+    display: none;
+}
+
+#bar-filter, #close-filter {
+    display: none;
+}
+
+@media screen and (max-width: 949px) {
+    #bar-filter {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 200px;
+        left: 0;
+        width: 50px;
+        height: 50px;
+        background: rgba(250, 185, 0, 0.2);
+        border: 2px solid #AD7F00;
+        color: #AD7F00;
+        border-left: none;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        cursor: pointer;
+        transition: all 0.1s linear;
+        z-index: 20000;
+    }
+    #bar-filter:hover {
+        color: #FAB900;
+        background: #AD7F00;
+        border: 2px solid #FAB900;
+        border-left: none;
+    }
+    .sections .filter {
+        display: none;
+        width: 40%;
+        height: 100%;
+        margin: 0;
+        border: none;
+        box-sizing: border-box;
+        padding: 30px 0 30px 30px;
+        font-size: 0.8em;
+        position: fixed;
+        left: 0;
+        top: 0;
+        overflow: auto;
+        overflow-x: hidden;
+        background: url('/img/system/corner-left.png') no-repeat -60px #F0F0FF;
+        background-size: 100%;
+        box-shadow: 0 0.5em 1.5em 1.5em #F0F0FF;
+        z-index: 25000;
+    }
+    .sections .product {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 799px) {
+    #bar-filter {
+        width: 25px;
+        height: 25px;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        font-size: 5px;
+        top: 125px;
+    }
+    #close-filter {
+        display: block;
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+        color: #AD7F00;
+        cursor: pointer;
+    }
+    .sections .filter {
+        display: none;
+        width: 100%;
+    }
+    .sections {
+        padding: 0 40px;
+    }
+    .sections .card {
+        display: none;
+    }
+    .sections .top .body {
+        width: 100%;
+    }
+    .sections .body .main-text p {
+        margin: 0 0 20px 0;
+    }
+    .sections .body .main-contacts {
+        display: block;
+        color: #fff;
+    }
+    .sections .body .main-contacts ul {
+        list-style: none;
+        background: rgba(255, 255, 255, 0.7);
+        border-radius: 5px;
+        padding: 10px;
+    }
+    .sections .galery {
+        display: none;
+    }
+    .sections .mob-gallery {
+        width: 100%;
+        margin: 30px auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .sections .mob-gallery a {
+        width: 100px;
+        height: 100px;
+        margin: 15px;
+        display: inline-block;
+        border: 3px solid #3CA6C7;
+        border-radius: 4px;
+        position: relative;
+        text-decoration: none;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        -moz-background-size: cover;
+        -webkit-background-size: cover;
+    }
 }
