--- a/public/css/stories.css
+++ b/public/css/stories.css
@@ -1,10 +1,11 @@
 .stories {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 60px;
 }
 
 .stories .title {
-    margin: 50px 0;
+    margin-bottom: 50px;
     text-align: center;
 }
 
@@ -59,6 +60,7 @@
 .stories-view {
     max-width: 750px;
     margin: 0 auto;
+    padding: 0 60px;
 }
 
 .stories-view .body {
@@ -97,7 +99,7 @@
     height: 100%;
 }
 
-.stories-view .main {
+.stories-view .main-text {
     width: 500px;
     margin: 30px auto;
     text-align: justify;
@@ -324,4 +326,66 @@
 
 .stories-view .notification a:hover {
     color: #80E1FF;
+}
+
+@media screen and (max-width: 799px) {
+    .stories {
+        padding: 0 40px;
+    }
+    .stories .components .item {
+        font-size: 15px;
+        width: 100px;
+    }
+    .stories .components .image {
+        width: 100px;
+        height: 100px;
+        border: 2px solid #3CA6C7;
+    }
+    .stories a:hover .image {
+        border: 2px solid #AD7F00;
+    }
+    .stories-view {
+        padding: 0 40px;
+    }
+    .stories-view .title {
+        display: block;
+        width: 100%;
+        text-align: center;
+        font-size: 15px;
+    }
+    .stories-view .title .avatar {
+        display: none;
+    }
+    .stories-view .main-text {
+        width: 100%;
+    }
+    .stories-view .thumbs, .stories-view .panel {
+        width: 100%;
+    }
+    .stories-view .thumbs a {
+        width: 100px;
+        height: 100px;
+    }
+    .stories-view .panel div {
+        font-size: 15px;
+        margin: 0 10px;
+    }
+    .stories-view .form {
+        width: 100%;
+    }
+    .stories-view .form label {
+        width: 100%;
+    }
+    .stories-view .form .button {
+        width: 100%;
+    }
+    .stories-view .messages .avt {
+        width: 25px;
+        height: 25px;
+        border: 2px solid #3CA6C7;
+        background: #3CA6C7;
+        margin: 0 0 0 5px;
+        position: absolute;
+        right: 0px;
+    }
 }
